--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
-sonar.projectKey= Security
-sonar.project.name=rfc_callcenter_api_main
+sonar.projectKey= rfc_callcenter_api_main
+sonar.project.name= rfc_callcenter_api_main
 sonar.sources=.
-sonar.host.url= http://localhost:9000
-sonar.token=sqa_af800d8d2d77f6fe59370246d5b7f5cacd2c2a91
+sonar.host.url= https://7376-41-223-51-170.ngrok-free.app
+sonar.token= sqp_3454614a305d8972e171f0be2d68112e67aa18d7
 sonar.language=python
 sonar.projectVersion=1.0
 
