--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey= rfc_callcenter_api_main
+sonar.projectKey=youssoufsylla_Security_0b22347c-f578-4730-bdb6-bec3630151bc
 sonar.project.name= rfc_callcenter_api_main
 sonar.sources=.
 sonar.host.url= https://7376-41-223-51-170.ngrok-free.app
